@@ -1,5 +1,16 @@
 2008-02-12  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
+	* data/gupnp-av-cp.glade:
+	* src/av-cp/renderer-combo.c:
+	* src/av-cp/renderer-combo.h:
+	* src/av-cp/renderer-controls.c:
+
+	Enable the user to clear the state of the currently selected renderer.
+	This is useful in dealing with crapy renderers out there that don't
+	emit LastChange events for state changes.
+
+2008-02-12  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
 	* src/av-cp/renderer-combo.c:
 
 	Refactor: put the state setting into a separate function.
